# litergss-android

./: .gitignore  CMakeLists.txt  README.md  arm64-v8a-android-toolchain.params  configure  x86_64-android-toolchain.params
host/: CMakeLists.txt
scripts/: build.sh  clean.sh  configure.sh  export.sh
scripts/tools/: clean-all-libs.sh
tools/: env.src.template
